# thermion

./: LICENSE  README.md  pyproject.toml
src/thermion/: __init__.py
src/thermion/core/: __init__.py  ensemble.py  fano.py  g2.py  geometry.py  opcodes.py  typed.py
src/thermion/forge/: API_SKETCH.md  __init__.py
src/thermion/meld/: __init__.py
src/thermion/sheaf/: __init__.py
tests/: test_core.py
