[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thermion"
version = "0.1.0"
description = "Rep(G) rewriting engine — Gibbs ensemble, Pachner moves, Fano geometry, exact arithmetic"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ian R. C. Buckley", email = "ian.r.c.buckley@gmail.com" }]
keywords = [
    "representation-theory",
    "gibbs-ensemble",
    "pachner-moves",
    "fano-geometry",
    "6j-symbols",
    "exact-arithmetic",
    "categorical-quantum-mechanics",
    "adelic-simplicial-architecture",
    "sheaf",
    "langlands",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.10"
dependencies = [
    "sympy>=1.12",
]

[project.urls]
Homepage = "https://github.com/roguetrainer/thermion"
Repository = "https://github.com/roguetrainer/thermion"
Documentation = "https://roguetrainer.github.io/thermion/"

[project.optional-dependencies]
numerics = [
    "numpy>=1.24",
    "scipy>=1.11",
]
jax = [
    "jax>=0.4",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "pymdown-extensions>=10.7",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/thermion"]
